    source package.
  * debian/control: Use only Build-Depends-Indep.
  * Fix "FTBFS: ! LaTeX Error: File `version.sty' not found." including
    Build-Depends: in texlive-latex-extra. (Closes: #562357)
  * Use compat 7.
  * debian/control: Use ${misc:Depends}.
  * debian/control: Addopt by the Debian Haskell Group.
  * source/format: Use 3.0 (quilt).
  * Remove references to old CVS repo.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 05 Mar 2010 12:39:31 -0300

haskell98-report (20030706-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Don't Include TrueType Fonts at report/classes.eps Closes: #420479
  * Replace tetex-bin B-D-I with texlive-base and remove tetex-extra

 -- Rene Mayorga <rmayorga@debian.org.sv>  Tue, 26 Aug 2008 09:21:45 -0600

haskell98-report (20030706-3) unstable; urgency=low

  * Fix building with GHC 6.6 by:
    * removing "-package lang" from tools/Makefile
    * commenting out IOExts import in tools/tex.hs
    and tightened build-dep to ghc6 >= 6.6. Closes: #397628.
  * Fix {,} bashisms in debian/rules.
  * Comment out get-orig-source in debian/rules (no longer points at
    the canonical location, and the sed has bitrotted).
  * Rename Build-Depends-Indep field to Build-Depends.
  * Remove fakeroot from build-depends.
  * Put build-depends all on one line.
  * Run latex 3 times so all the references etc work out.
    Closes: #306029, #322945.
  * Comment out "export DH_VERBOSE=1".
  * Bump policy version to 3.7.2.
  * Change format ps to PostScript in the doc-base files.
  * Thanks to Arjan Oosting for various contributions above.

 -- Ian Lynagh (wibble) <igloo@debian.org>  Sat, 25 Nov 2006 22:27:25 +0000

haskell98-report (20030706-2) unstable; urgency=low

  * Correct doc-base files to refer to gzipped files. Closes: #212955.

 -- Ian Lynagh (wibble) <igloo@debian.org>  Thu, 13 Nov 2003 18:29:20 +0000

haskell98-report (20030706-1) unstable; urgency=low

  * New upstream source.