@@ -21,9 +21,9 @@ clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
-	-$(MAKE) clean
-	-$(MAKE) -C ffi clean
-	-$(MAKE) -C hierarchical-modules clean
+	$(MAKE) clean
+	$(MAKE) -C ffi clean
+	$(MAKE) -C hierarchical-modules clean
 	dh_clean
 
 binary-indep: build
