@@ -10,6 +10,7 @@ haskell98-report (20100305-1) UNRELEASED; urgency=low
   * debian/control: Addopt by the Debian Haskell Group.
   * source/format: Use 3.0 (quilt).
   * Remove references to old CVS repo.
+  * debian/rules: Don't ignore errors on make clean.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 05 Mar 2010 12:39:31 -0300
 
